apps/nextcloud/templates/httproute.yaml
# HSTS middleware 
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-hsts
  namespace: nextcloud  
spec:
  headers:
    stsSeconds: 15552000
    stsIncludeSubdomains: true
    stsPreload: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
    - name: external-gateway
      namespace: traefik
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - "nextcloud.jwschman.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: nextcloud-hsts
      backendRefs:
        - name: nextcloud
          port: 80
          kind: Service
          group: ''
          weight: 1
